# backlog-mcp-server-rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/commands/: code.md  commit.md  fix.md  plan.md
.github/workflows/: ci.yml  release.yml
backlog-mcp-server/: Cargo.toml
backlog-mcp-server/src/: access_control.rs  error.rs  file_utils.rs  lib.rs  project_cache.rs  server.rs
backlog-mcp-server/src/document/: bridge.rs  request.rs
backlog-mcp-server/src/file/: bridge.rs
backlog-mcp-server/src/git/: bridge.rs  request.rs
backlog-mcp-server/src/issue/: bridge.rs  custom_field_converter.rs  response_transformer_test.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: common.rs  mod.rs  rate_limit.rs  team.rs  watching.rs  webhook.rs
cli/src/commands/activity/: args.rs  handler.rs  mod.rs
cli/src/commands/activity/subcommands/: mod.rs  recent.rs
cli/src/commands/document/: args.rs  handler.rs  mod.rs
cli/src/commands/document/subcommands/: list.rs
cli/src/commands/git/: args.rs  handler.rs  mod.rs
cli/src/commands/git/subcommands/: mod.rs  pr.rs  pr_attachments.rs  pr_comments.rs  repo.rs
cli/src/commands/issue/: args.rs  handler.rs  mod.rs
cli/src/commands/issue/subcommands/: attachments.rs  comments.rs  crud.rs  list.rs  mod.rs  participants.rs  shared_files.rs
cli/src/commands/project/: args.rs  handler.rs  mod.rs
cli/src/commands/project/subcommands/: categories.rs  crud.rs  custom_fields.rs  issue_types.rs  list.rs  misc.rs  mod.rs  statuses.rs  teams.rs  users.rs  versions.rs
cli/src/commands/space/: args.rs  handler.rs  mod.rs
cli/src/commands/space/subcommands/: info.rs  mod.rs  writable.rs
cli/src/commands/user/: args.rs  handler.rs  mod.rs
cli/src/commands/user/subcommands/: info.rs  mod.rs  notifications.rs  stars.rs  watchings.rs
cli/src/commands/wiki/: args.rs  handler.rs  mod.rs
cli/src/commands/wiki/subcommands/: attachments.rs  crud.rs  list.rs  mod.rs  shared_files.rs
cli/tests/: feature_flags_test.rs  star_test.rs  watching_test.rs  webhook_test.rs
crates/backlog-activity/: Cargo.toml
crates/backlog-activity/src/api/: activity_api.rs  get_activity.rs
crates/backlog-activity/tests/: activity_api_test.rs
crates/backlog-api-client/: Cargo.toml
crates/backlog-api-client/src/: lib.rs
crates/backlog-api-client/tests/: client_test.rs
crates/backlog-api-client/tests/common/: mod.rs
crates/backlog-api-core/src/: api_rate_limit.rs  error.rs  http_method.rs
crates/backlog-api-macros/: Cargo.toml
crates/backlog-api-macros/src/: lib.rs  to_form_params.rs
crates/backlog-api-macros/tests/: integration_test.rs
crates/backlog-core/: Cargo.toml
crates/backlog-core/src/: active_type_id.rs  api_date.rs  date.rs  error.rs  file_type.rs  issue_id_or_key.rs  issue_key.rs  language.rs  nulab_account.rs  project_id_or_key.rs  project_key.rs  repository_id_or_name.rs  repository_name.rs  role.rs  space_key.rs  star.rs  text_formatting_rule.rs  user.rs
crates/backlog-core/src/activity/: content.rs
crates/backlog-core/src/identifier/: document_id.rs  mod.rs  u64_identifier_test.rs
crates/backlog-document/: Cargo.toml
crates/backlog-document/src/api/: add_document.rs  delete_document.rs  document_api.rs  get_document_tree.rs  list_documents.rs  mod.rs
crates/backlog-document/src/models/: document_response.rs  mod.rs  tree_node.rs
crates/backlog-document/tests/: document_api_test.rs  document_writable_test.rs  get_document_test.rs  get_document_tree_test.rs  list_documents_test.rs
crates/backlog-document/tests/common/: mod.rs
crates/backlog-domain-models/: Cargo.toml
crates/backlog-domain-models/src/: category.rs  comment.rs  custom_field.rs  error.rs  file_content.rs  issue_type.rs  lib.rs  milestone.rs  priority.rs  project.rs  resolution.rs  star.rs  status.rs  status_color.rs  team.rs
crates/backlog-file/: Cargo.toml
crates/backlog-file/src/models/: mod.rs  shared_file.rs
crates/backlog-file/tests/: file_api_test.rs
crates/backlog-git/: Cargo.toml
crates/backlog-git/src/: models.rs
crates/backlog-git/tests/: git_api_test.rs  git_writable_test.rs
crates/backlog-git/tests/common/: mod.rs
crates/backlog-issue/: Cargo.toml
crates/backlog-issue/benches/: custom_field_bench.rs
crates/backlog-issue/src/api/: add_comment_notification.rs  add_issue.rs  add_recently_viewed_issue.rs  count_issue.rs  custom_field_utils.rs  delete_issue.rs  get_comment_notifications.rs  get_participant_list.rs  mod.rs  update_issue.rs
crates/backlog-issue/src/models/: attachment.rs  changelog.rs  custom_field_type_id.rs  custom_field_value.rs  custom_field_with_value.rs  custom_field_with_value_test.rs  initial_date.rs  list_item.rs  mod.rs  parent_child.rs  shared_file.rs
crates/backlog-issue/tests/: issue_api_test.rs  issue_recently_viewed_writable_test.rs  issue_writable_test.rs
crates/backlog-issue/tests/common/: mod.rs
crates/backlog-project/tests/: project_writable_test.rs
crates/backlog-space/: Cargo.toml
crates/backlog-space/tests/: space_api_test.rs  space_recent_updates_test.rs  space_writable_test.rs
crates/backlog-team/: Cargo.toml
crates/backlog-team/tests/: team_api_test.rs
crates/backlog-user/: Cargo.toml
crates/backlog-user/src/api/: get_notifications.rs  get_user_star_count.rs  get_user_stars.rs  get_watching_count_test.rs  get_watching_list_test.rs  reset_unread_notification_count.rs
crates/backlog-user/src/models/: watching_test.rs
crates/backlog-user/tests/: get_watching_count_test.rs  get_watching_list_test.rs  user_api_test.rs  user_recent_updates_test.rs
crates/backlog-watching/: Cargo.toml
crates/backlog-watching/tests/: add_watching_test.rs  delete_watching_test.rs  get_watching_test.rs  mark_as_read_test.rs  update_watching_test.rs
crates/backlog-webhook/: Cargo.toml
crates/backlog-webhook/src/api/: webhook_api.rs
crates/backlog-webhook/tests/: webhook_api_test.rs  webhook_writable_test.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs
crates/client/tests/: execute_test.rs
examples/: custom_fields_example.rs
(+27 files in other folders)
