[workspace]
resolver = "2"
members = [
    "cli",
    "backlog-mcp-server",
    "crates/backlog-api-client",
    "crates/backlog-api-macros",
    "crates/client",
    "crates/backlog-core",
    "crates/backlog-api-core",
    "crates/backlog-domain-models",
    "crates/backlog-issue",
    "crates/backlog-project",
    "crates/backlog-space",
    "crates/backlog-user",
    "crates/backlog-document",
    "crates/backlog-git",
    "crates/backlog-file",
    "crates/backlog-wiki", "crates/backlog-activity", "crates/backlog-team", "crates/backlog-star", "crates/backlog-rate-limit", "crates/backlog-watching", "crates/backlog-webhook"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
reqwest = { version = "0.12.22", default-features = false, features = ["json", "multipart", "rustls-tls"] }
tokio = { version = "1.46", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "2.0"
url = "2.5"
bytes = "1" # Added bytes
regex = "1.11"
chrono = { version = "0.4.41", features = ["serde"] }
derive_builder = "0.20"
schemars = { version = "1.0", features = ["chrono04"] }
wiremock = "0.6.4"
base64 = "0.22"
serde_urlencoded = "0.7"
form_urlencoded = "1.2"
tempfile = "3.20"
pretty_assertions = "1.4"
