[package]
name = "mcp-backlog-server"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["issue_writable", "git_writable", "wiki_writable"]
issue_writable = ["backlog-api-client/issue_writable"]
git_writable = ["backlog-api-client/git_writable"]
wiki_writable = ["backlog-api-client/wiki_writable"]

[dependencies]
rmcp = { version = "0.5", features = ["transport-io"] }
tokio = { workspace = true, features = ["full"] } # Using full for server, can be rt-multi-thread, macros
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Dependencies on other workspace crates
backlog-api-client = { path = "../crates/backlog-api-client", features = ["issue", "document", "git", "project", "user", "file", "wiki", "schemars"] } # Added "file" and "wiki" features
backlog-project = { path = "../crates/backlog-project" }
backlog-file = { path = "../crates/backlog-file" }
backlog-wiki = { path = "../crates/backlog-wiki" }
backlog-user = { path = "../crates/backlog-user" }
backlog-core = { path = "../crates/backlog-core" } # For ProjectIdOrKey parsing and other core types
backlog-issue = { path = "../crates/backlog-issue" } # For CustomFieldType
backlog-domain-models = { path = "../crates/backlog-domain-models" } # For CustomFieldType and CustomFieldSettings
schemars = { workspace = true, features = ["derive"] } # For JsonSchema derive
strsim = "0.11.1"
base64 = { workspace = true }
dashmap = "6.1"

[dev-dependencies]
wiremock = { workspace = true }
