[package]
name = "blg"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "blg"
path = "src/lib.rs"

[[bin]]
name = "blg"
path = "src/main.rs"

[dependencies]
backlog-api-client = { path = "../crates/backlog-api-client" }
backlog-core = { path = "../crates/backlog-core" }
backlog-domain-models = { path = "../crates/backlog-domain-models" }
backlog-project = { path = "../crates/backlog-project" }
backlog-issue = { path = "../crates/backlog-issue" }
backlog-document = { path = "../crates/backlog-document" }
backlog-wiki = { path = "../crates/backlog-wiki" }
backlog-user = { path = "../crates/backlog-user" }
backlog-space = { path = "../crates/backlog-space" }
backlog-team = { path = "../crates/backlog-team" }
backlog-star = { path = "../crates/backlog-star" }
backlog-watching = { path = "../crates/backlog-watching" }
backlog-webhook = { path = "../crates/backlog-webhook" }
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true, features = ["full", "macros", "rt-multi-thread"] }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
prettytable-rs = "0.10"
anyhow = "1"

[dev-dependencies]
tempfile = "3.2"

[features]
default = ["all", "all_writable"]
git = ["backlog-api-client/git"]
issue = ["backlog-api-client/issue"]
project = ["backlog-api-client/project"]
space = ["backlog-api-client/space"]
user = ["backlog-api-client/user"]
document = ["backlog-api-client/document"]
file = ["backlog-api-client/file"]
wiki = ["backlog-api-client/wiki"]
activity = ["backlog-api-client/activity"]
team = ["backlog-api-client/team"]
star = ["backlog-api-client/star"]
rate-limit = ["backlog-api-client/rate-limit"]
watching = ["backlog-api-client/watching"]
webhook = ["backlog-api-client/webhook"]
all = ["git", "issue", "project", "space", "user", "document", "file", "wiki", "activity", "team", "star", "rate-limit", "watching", "webhook"]
issue_writable = ["backlog-api-client/issue_writable"]
project_writable = ["backlog-api-client/project_writable"]
space_writable = ["backlog-api-client/space_writable"]
git_writable = ["backlog-api-client/git_writable"]
wiki_writable = ["backlog-api-client/wiki_writable"]
team_writable = ["backlog-api-client/team_writable"]
star_writable = ["backlog-api-client/star_writable"]
user_writable = ["backlog-api-client/user_writable"]
watching_writable = ["backlog-api-client/watching_writable"]
webhook_writable = ["backlog-api-client/webhook_writable"]
document_writable = ["backlog-api-client/document_writable"]
all_writable = ["issue_writable", "project_writable", "space_writable", "git_writable", "wiki_writable", "team_writable", "star_writable", "user_writable", "watching_writable", "webhook_writable", "document_writable"]