[package]
name = "backlog-activity"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Internal crates
backlog-api-core = { path = "../backlog-api-core" }
backlog-core = { path = "../backlog-core" }
client = { path = "../client" }

# External dependencies
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
serde_json = "1.0"
wiremock = "0.6"

[features]
default = []
