[package]
name = "backlog-api-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["issue", "project", "space", "user", "document", "git", "file", "wiki", "team", "star", "rate-limit", "watching", "webhook"] # Library defaults without writable features
issue = ["backlog-issue"]
project = ["backlog-project", "backlog-domain-models"]
space = ["backlog-space"]
user = ["backlog-user"]
document = ["backlog-document"]
git = ["backlog-git"]
file = ["backlog-file"]
wiki = ["backlog-wiki"]
activity = ["backlog-activity"]
team = ["backlog-team", "backlog-domain-models"]
star = ["backlog-star", "backlog-domain-models"]
rate-limit = ["backlog-rate-limit"]
watching = ["backlog-watching"]
webhook = ["backlog-webhook"]
schemars = [ # Added schemars feature to propagate to sub-crates
    "backlog-core/schemars",
    "backlog-domain-models?/schemars",
    "backlog-issue?/schemars",
    "backlog-project?/schemars",
    # "backlog-space/schemars", # Add if/when space has schemars
    # "backlog-user/schemars", # Removed as backlog-user doesn't have this feature
    "backlog-document?/schemars",
    "backlog-git?/schemars",
    "backlog-file?/schemars",
    "backlog-wiki?/schemars",
    "backlog-team?/schemars",
    # "backlog-star?/schemars", # Removed as backlog-star doesn't have this feature
    "backlog-webhook?/schemars",
]
all_writable = ["issue_writable", "project_writable", "space_writable", "user_writable", "document_writable", "git_writable", "wiki_writable", "team_writable", "star_writable", "watching_writable", "webhook_writable"]
issue_writable = ["backlog-issue?/writable", "client/writable"]
project_writable = ["backlog-project?/writable", "client/writable"]
space_writable = ["backlog-space?/writable", "client/writable"]
user_writable = ["backlog-user?/writable", "client/writable"]
document_writable = ["backlog-document?/writable", "client/writable"]
git_writable = ["backlog-git?/writable", "client/writable"]
wiki_writable = ["backlog-wiki?/writable", "client/writable"]
team_writable = ["backlog-team?/writable", "client/writable"]
star_writable = ["backlog-star?/writable", "client/writable"]
watching_writable = ["backlog-watching?/writable", "client/writable"]
webhook_writable = ["backlog-webhook?/writable", "client/writable"]

[dependencies]
client = { path = "../client" }
backlog-core = { path = "../backlog-core" }
backlog-api-core = { path = "../backlog-api-core" }
backlog-domain-models = { path = "../backlog-domain-models", optional = true }
backlog-issue = { path = "../backlog-issue", optional = true }
backlog-project = { path = "../backlog-project", optional = true }
backlog-space = { path = "../backlog-space", optional = true }
backlog-user = { path = "../backlog-user", optional = true }
backlog-document = { path = "../backlog-document", optional = true }
backlog-git = { path = "../backlog-git", optional = true }
backlog-file = { path = "../backlog-file", optional = true }
backlog-wiki = { path = "../backlog-wiki", optional = true }
backlog-activity = { path = "../backlog-activity", optional = true }
backlog-team = { path = "../backlog-team", optional = true }
backlog-star = { path = "../backlog-star", optional = true }
backlog-rate-limit = { path = "../backlog-rate-limit", optional = true }
backlog-watching = { path = "../backlog-watching", optional = true }
backlog-webhook = { path = "../backlog-webhook", optional = true }
tokio = { workspace = true }
url = { workspace = true }

# For examples
chrono = { workspace = true }

[[example]]
name = "custom_fields_example"
path = "../../examples/custom_fields_example.rs"
required-features = ["issue", "issue_writable"]

[[example]]
name = "custom_fields_simple"
path = "../../examples/custom_fields_simple.rs"
required-features = ["issue", "issue_writable"]

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json = { workspace = true }