[package]
name = "backlog-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
schemars = { workspace = true, features = ["chrono04"], optional = true }

[features]
default = []
schemars = ["dep:schemars"]
typed-activity = []
