[package]
name = "backlog-document"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
client = { path = "../client" }
backlog-core = { path = "../backlog-core" }
backlog-api-core = { path = "../backlog-api-core" }
backlog-api-macros = { path = "../backlog-api-macros" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
derive_builder = { workspace = true }
schemars = { workspace = true, optional = true }
url = { workspace = true }
reqwest = { workspace = true, features = ["json"] }

[dev-dependencies]
client = { path = "../client", features = ["test-utils"] }
wiremock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = []
writable = ["client/writable"]
schemars = ["dep:schemars", "backlog-core/schemars"]
