[package]
name = "backlog-domain-models"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
schemars = ["dep:schemars", "backlog-core/schemars"]

[dependencies]
backlog-core = { path = "../backlog-core" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true, features = ["chrono04"], optional = true }