[package]
name = "backlog-file"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
client = { path = "../client" }
backlog-core = { path = "../backlog-core" }
backlog-domain-models = { path = "../backlog-domain-models" }
backlog-api-core = { path = "../backlog-api-core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
derive_builder = { workspace = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
client = { path = "../client", features = ["test-utils"] }
wiremock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = []
schemars = ["dep:schemars", "backlog-core/schemars", "backlog-domain-models/schemars"]