[package]
name = "backlog-git"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
backlog-core = { path = "../backlog-core", features = ["schemars"] }
backlog-api-core = { path = "../backlog-api-core" }
backlog-api-macros = { path = "../backlog-api-macros" }
client = { path = "../client" }
derive_builder = { workspace = true }
url = { workspace = true }
schemars = { workspace = true, optional = true }

[features]
default = []
writable = ["client/writable"]
schemars = ["dep:schemars", "backlog-core/schemars"]

[dev-dependencies]
client = { path = "../client", features = ["test-utils"] }
wiremock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
