[package]
name = "backlog-issue"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
writable = [ "client/writable" ]
schemars = ["dep:schemars", "backlog-domain-models/schemars", "backlog-core/schemars"]

[dependencies]
client = { path = "../client" }
backlog-core = { path = "../backlog-core" }
backlog-api-core = { path = "../backlog-api-core" }
backlog-domain-models = { path = "../backlog-domain-models" }
backlog-api-macros = { path = "../backlog-api-macros" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
schemars = { workspace = true, features = ["chrono"], optional = true }

[dev-dependencies]
client = { path = "../client", features = ["test-utils"] }
wiremock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json = { workspace = true }
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "custom_field_bench"
harness = false
