[package]
name = "backlog-space"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
writable = []

[dependencies]
client = { path = "../client" }
backlog-core = { path = "../backlog-core" }
backlog-api-core = { path = "../backlog-api-core" }
backlog-api-macros = { path = "../backlog-api-macros" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
derive_builder = { workspace = true }

[dev-dependencies]
client = { path = "../client", features = ["test-utils"] }
wiremock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tempfile = { workspace = true }
