[package]
name = "backlog-user"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
writable = []

[dependencies]
client = { path = "../client" }
backlog-core = { path = "../backlog-core" }
backlog-api-core = { path = "../backlog-api-core" }
backlog-api-macros = { path = "../backlog-api-macros" }
backlog-domain-models = { path = "../backlog-domain-models" }
backlog-issue = { path = "../backlog-issue" }
backlog-watching = { path = "../backlog-watching" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }

[dev-dependencies]
client = { path = "../client", features = ["test-utils"] }
wiremock = { workspace = true }
tokio = { workspace = true }
