[package]
name = "backlog-webhook"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
writable = ["client/writable"]
schemars = ["dep:schemars", "backlog-core/schemars"]

[dependencies]
client = { path = "../client" }
backlog-core = { path = "../backlog-core" }
backlog-api-core = { path = "../backlog-api-core" }
backlog-api-macros = { path = "../backlog-api-macros" }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }

schemars = { workspace = true, optional = true }

[dev-dependencies]
client = { path = "../client", features = ["test-utils"] }
wiremock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json = { workspace = true }