[package]
name = "client"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
writable = []
test-utils = ["dep:wiremock"]

[dependencies]
backlog-api-core = { path = "../backlog-api-core" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
wiremock = { workspace = true, optional = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }
tokio = { workspace = true }
